--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^4.11.0"
   },
   "devDependencies": {
+    "gh-pages": "^6.1.0",
     "prettier": "^3.1.0",
     "tailwindcss": "^3.3.5"
   },
@@ -45,6 +46,7 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "deploy": "gatsby build && gh-pages -d public"
   }
 }
